--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,7 @@ title:                 Gabriel Barbosa Pereira
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  "Best Jekyll Theme by a Mile".
-  **Hydejack** is your presence on the web, featuring a blog, portfolio, and resume.
-  Open `_config.yml` to edit this text.
+  **Gabriel Barbosa Pereira** is a Science Computer student. His interests are data science and development.
 
 # A shorter description for the sidebar.
 tagline:               >
@@ -68,7 +66,7 @@ menu:
 copyright:             © 2019. All rights reserved.
 
 # Format of the permalinks
-permalink:             /:categories/:year-:month-:day-:title/
+permalink:             /blog/:categories/:year-:month-:day-:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:              7
@@ -224,7 +222,7 @@ hydejack:
 
 collections:
   featured_categories:
-    permalink:         /:name/
+    permalink:         /blog/:name/
     output:            true
 
   featured_tags:
