returning the works

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -25,7 +25,7 @@ author1:
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
   social:
     # twitter:         jekyllrb
-    github:          gabriellbp
+    github:          GabriellBP
     linkedin:        gabriel-barbosa-091673189
     # download:        <url>
     email:           gabryelbp@gmail.com
