--- a/_config.yml
+++ b/_config.yml
@@ -274,7 +274,7 @@ plugins:
 # ---------------------------------------------------------------------------------------
 
 # theme: jekyll-theme-hydejack
-remote_theme: gabriellbp/hydejack@v8.5.1
+remote_theme: GabriellBP/hydejack@v8.5.2
 
 # SEO Tag
 # ---------------------------------------------------------------------------------------
